<resources>
    <string name="app_name">RSS Feed Reader</string>
    <string name="rss_link">RSS Links</string>
    <string name="addFeed">Add a feed</string>
    <string name="add_rss_link">Add RSS link</string>
    <string name="url" translatable="false">URL</string>
    <string name="save">Save</string>
    <string name="show_rss_list">Show RSS list</string>
    <string name="name">Name</string>
    <string name="enterName">Enter the name</string>
    <string name="EnterUrl">Enter the URL</string>
    <string name="feedAdress">Feed URL</string>
    <string name="feedName">Feed name</string>
    <string name="error">Error</string>
    <string name="checking">Checking. Please wait…</string>
    <string name="settings">Settings</string>
    <string name="update_message">When enabled, the RSS feeds will be udated once a day</string>
    <string name="autoupdate">Automatic updates</string>
    <string name="wifi_update">Update on WiFi network</string>
    <string name="data_update" >Update on data network</string>
    <string name="existing_feed">This RSS feed already exists!</string>
    <string name="update">Update</string>
    <string name="ask_delete">Are you sure you want to delete this item ?</string>
    <string name="delete_success">The item has been successfully deleted</string>
    <string name="update_success">The item has been successfully updated</string>
    <string name="delete">Delete</string>
    <string name="errorDefaultMsg">Error while reaching RSS Feed</string>
    <string name="errorParsingTitle">Impossible to detect the feed</string>
    <string name="errorParsingMsg">Impossible to detect a RSS feed in the website</string>
    <string name="errorUnknownHostTitle">Unknown host</string>
    <string name="errorUnknownHostMsg">The website doesn\'t exist</string>
    <string name="hour">hour</string>
    <string name="minute" translatable="false">minute</string>
    <string name="second">second</string>
    <string name="last_sync">Last sync</string>
</resources>
