<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:text="@string/feedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/modifyDialogFeedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textCapSentences"
        android:hint="@string/enterName"
        android:maxLines="1">

        <requestFocus />
    </EditText>

    <TextView
        android:text="@string/feedAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <EditText
        android:id="@+id/modifyDialogFeedUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/EnterUrl"
        android:maxLines="1"
        android:inputType="textUri">
    </EditText>

</LinearLayout>