<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/autoupdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                    <TextView
                        android:text="@string/update_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:layout_height="match_parent">
                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/autoupdate_switch"
                        android:checked="false"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="#DDD"
                android:layout_height="1dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="5dp" />
            <View
                android:layout_width="fill_parent"
                android:background="#DDD"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/wifi_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:layout_height="match_parent">
                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/wifi_switch"
                        android:checked="false"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="#DDD"
                android:layout_height="1dp" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:text="@string/data_update"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:paddingLeft="16dp"
                    android:layout_height="match_parent">
                    <Switch
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/data_switch"
                        android:checked="false"/>
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:background="#DDD"
                android:layout_height="1dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>